# FotoDerp

./: .gitignore  BUILD.md  CLAUDE.md  DESIGN.md  LICENSE  MODELS.md  README.md  RESEARCH.md  SESSION-PROMPT.md  WINDOWS-BUILD-TESTPLAN.md  package-lock.json  package.json
.a5c/: package-lock.json  package.json  project-profile.json  project-profile.md  quality-gates.json
.a5c/processes/: fotoderp-ai-tagging-tdd.js  fotoderp-direct.js  fotoderp-simple.js  fotoderp-windows-fix.js  windows-build-test.js
.a5c/runs/01KQ65B2SF6J6QA4AE55MDPQS6/: inputs.json  run.json
.a5c/runs/01KQ67JTMHSPDGB5MQG9060GBN/: run.json
.a5c/runs/01KQ67NGKN7S3AQHGYJN169QVV/: run.json
.a5c/runs/01KQ67Q4KSGBK8V3YXMRF0R6EA/: run.json
.a5c/runs/01KQ67RBQFK0ARHRQ7Y2H1MPEM/: run.json
.a5c/runs/01KQ74KN4GQ1EPK9RQRN7FPC3Z/: run.json
.a5c/skills/fotoderp-rdp-testing/: SKILL.md
.github/workflows/: babysitter.yml  build.yml  ci.yml  release.yml
backend/: build_backend.py  build_simple.py  nuitka-config.ini  pyproject.toml  requirements.txt
backend/fotoerp_backend/: __init__.py  database.py  main.py  models.py
backend/fotoerp_backend/services/: __init__.py  analysis.py  culling.py  import.py  import_.py  llama_server.py  openapi_adapter.py  search.py
backend/fotoerp_backend/workers/: __init__.py  analyze_worker.py
backend/tests/: test_analysis.py  test_collections.py  test_culling.py  test_face_recognition.py  test_integration.py  test_ocr.py  test_rating.py  test_search.py
electron/: entitlements.plist  main.js  preload.js  uninstall-mac.sh  uninstall.sh  uninstaller.nsh
electron/Uninstall FotoDerp.app/Contents/: Info.plist
frontend/: index.html
frontend/css/: style.css
frontend/js/: app.js
icons/: generate_icons.py
(+87 files in other folders)
